--- a/style.css
+++ b/style.css
@@ -37,13 +37,37 @@ h1 {
     position: relative;
     width: 314px;
     height: 315px;
+    z-index: 2;
 }
-
 .img2 {
     position: relative;
     width: 232px;
     height: 203px;
+    z-index: 2;
 }
+.ellipse2{
+    position: relative;
+    bottom: 30px;
+    z-index: 1;
+}
+.ellipse3{
+    position: relative;
+    bottom: 20px;
+    z-index: 1;
+}
+.firstimages{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.secondimages{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .text {
     font-family: Roboto;
     display: flex;
@@ -104,6 +128,14 @@ h1 {
     .margin{
         margin: 0px;
     }
+    .ellipse3{
+        display: none;
+    }
+    .ellipse2{
+        width: 211px;
+        height: 34px;
+        bottom: 20px;
+    }
 }
 
 @media (max-width: 375px) {
@@ -140,5 +172,13 @@ h1 {
     }
     .margin{
         margin: 0px;
+    }
+    .ellipse3{
+        display: none;
+    }
+    .ellipse2{
+        width: 170px;
+        height: 27px;
+        bottom: 10px;
     }
 }
